setting up pattern library in progress

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Vue.js Components Library",
+  "name": "vuejs-components-library",
   "version": "1.7.10",
   "description": "Nuxt.js project",
   "author": "Anatta Design",
