--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "styleguide:build": "vue-styleguidist build"
   },
   "dependencies": {
+    "babel-plugin-dynamic-import-node": "^2.0.0",
+    "babel-plugin-dynamic-import-webpack": "^1.0.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-es2015": "^6.24.1",
     "node-sass": "^4.9.1",
     "nuxt": "^1.0.0-rc11",
