--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-dynamic-import-webpack": "^1.0.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-es2015": "^6.24.1",
+    "file-loader": "^1.1.11",
     "node-sass": "^4.9.1",
     "nuxt": "^1.0.0-rc11",
     "postcss-at2x": "^4.0.2",
