--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-es2015": "^6.24.1",
     "file-loader": "^1.1.11",
+    "moment": "^2.22.2",
     "node-sass": "^4.9.1",
     "nuxt": "^1.0.0-rc11",
+    "pikaday": "^1.7.0",
     "postcss-at2x": "^4.0.2",
     "postcss-automath": "^1.0.1",
     "postcss-cssnext": "^3.1.0",
