setup gh styleguide deploy

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "styleguide": "vue-styleguidist server",
-    "styleguide:build": "vue-styleguidist build"
+    "styleguide:build": "vue-styleguidist build",
+    "styleguide:gh-pages": "DEPLOY_ENV=GH_PAGES vue-styleguidist build",
+    "deploy": "push-dir --dir=styleguide --branch=master --cleanup"
   },
   "dependencies": {
     "babel-plugin-dynamic-import-node": "^2.0.0",
